# Brainiac_Example

./: CMakeLists.txt  README.md  teknic_ws.code-workspace
example/SDK_Examples/Homing/: Homing.cpp
example/SDK_Examples/MultiThread/: Axis.cpp  Axis.h
include/: Axis.h  Brainiac.h  Logging.h  Servo.h  Supervisor.h  file.h  file_old.h
src/: Axis.cpp  Brainiac.cpp  Servo.cpp  Supervisor.cpp  combo.cpp  example.cpp  main.cpp  trigger.cpp
